add direct memory count